--- a/ui/ui_py/AboutWindow.ui
+++ b/ui/ui_py/AboutWindow.ui
@@ -25,11 +25,6 @@
     <height>290</height>
    </size>
   </property>
-  <property name="font">
-   <font>
-    <pointsize>-1</pointsize>
-   </font>
-  </property>
   <property name="windowTitle">
    <string>О программе</string>
   </property>
@@ -39,6 +34,7 @@
 	background-color: #273238;
 	border: 0;
 	font-size:14px;
+	font-family: Arial, sans-serif;
 }</string>
   </property>
   <widget class="QLabel" name="WebSiteLabel">
