--- a/ui/ui_py/SettingsWindow.ui
+++ b/ui/ui_py/SettingsWindow.ui
@@ -22,11 +22,6 @@
     <height>440</height>
    </size>
   </property>
-  <property name="font">
-   <font>
-    <pointsize>-1</pointsize>
-   </font>
-  </property>
   <property name="windowTitle">
    <string>Настройки</string>
   </property>
@@ -39,6 +34,7 @@
 	background-color: #273238;
 	border: 0;
 	font-size:14px;
+	font-family: Arial, sans-serif;
 }</string>
   </property>
   <widget class="QPushButton" name="UrlUpdates">
